Add options page. Add automatic location update

--- a/stylesheets/components/baseVariables.styl
+++ b/stylesheets/components/baseVariables.styl
@@ -1,7 +1,7 @@
 // NOTE - Copied from main project
 // Variables
 
-$blue                  = #01579B
+$blue                  = #016bbe
 $lightBlue             = #558AB2
 $teal                  = #1AD5B7
 $red                   = rgb(202, 45, 45)
