--- a/stylesheets/components/buttons.styl
+++ b/stylesheets/components/buttons.styl
@@ -32,3 +32,7 @@ button
   &.material-icons
     padding 0
     border-radius 160px // to keep it circular
+
+  &.primary
+    background-color $brandColor
+    color #fff
